fixed layout issue in features home component

--- a/src/app/components/features-home/features-home.component.scss
+++ b/src/app/components/features-home/features-home.component.scss
@@ -1,5 +1,32 @@
+$pureBlack: #000000;
+$lightGrey: #DFDFDF;
+$pureWhite: #ffffff;
+$font: 'DM Sans',
+sans-serif;
+//-----------------------Features section -----------------
+
 .feat-cont {
     padding: 7%;
     text-align: center !important;
     align-items: flex-end;
+    .feat-card {
+        @media screen and (max-width:450px){
+            width: 100% !important;
+        }
+        width: 33% !important ;
+
+        margin-bottom: 50px;
+        padding: 1% 3%;
+        img {
+            margin-bottom: 20px;
+        }
+        h3 {
+            font-size: 18px;
+            margin-bottom: 15px;
+        }
+        p {
+            margin-bottom: 0;
+        }
+    }
+
 }
